HUE-6077 [frontend] Drop hue3.css from Hue 4 pages
(cherry picked from commit a4db0950ac976d4ad3ac21b9b8c431a9b75cf26f)

--- a/apps/metastore/src/metastore/static/metastore/less/metastore.less
+++ b/apps/metastore/src/metastore/static/metastore/less/metastore.less
@@ -17,7 +17,7 @@
 */
 
 @import (reference) "cui/colors.less";
-@import (reference) "hue-attributes.less";
+@import (reference) "hue-mixins.less";
 
 .hueBreadcrumbBar {
   padding: 0;
