--- a/desktop/core/src/desktop/static/desktop/less/components/hue-clearable.less
+++ b/desktop/core/src/desktop/static/desktop/less/components/hue-clearable.less
@@ -16,34 +16,25 @@
  limitations under the License.
 */
 
-.container-fluid {
-  border: none;
-  margin-left: 0;
-  margin-right: 0;
+.clearable {
+  background: url(/static/desktop/art/clearField.png) no-repeat right -10px center;
+  border: 1px solid #999;
+  padding: 3px 18px 3px 4px;
+  border-radius: 3px;
 }
 
-.navbar .navbar-inner {
-  padding-right: 24px;
-
-  ul.nav li {
-    margin-right: 10px;
-  }
-
-  ul.nav li a:hover {
-    background-color: transparent;
+@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+  .clearable {
+    background: url(/static/desktop/art/clearField@2x.png) no-repeat right -10px center;
+    background-size: 10px 10px;
   }
 }
 
-.dropdown-submenu:hover > a,
-.dropdown-submenu:focus > a {
-  background-image: none !important;
-  background-color: @cui-blue-500;
-
-  > i {
-    color: @cui-white !important;
-  }
-
-  > svg {
-    fill: @cui-white !important;
-  }
+.clearable.x {
+  background-position: right 5px center;
 }
+
+.clearable.onX {
+  cursor: pointer !important;
+}
+
