--- a/desktop/core/src/desktop/static/desktop/less/hue-assist.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-assist.less
@@ -17,7 +17,7 @@
 */
 @import (reference) "cui/colors.less";
 @import (reference) "cui/extra-variables.less";
-@import (reference) "hue-attributes.less";
+@import (reference) "hue-mixins.less";
 
 .assist-panel {
   .flex(0 0 200px);
