--- a/desktop/core/src/desktop/static/desktop/less/hue3-extra.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue3-extra.less
@@ -16,7 +16,7 @@
  limitations under the License.
 */
 @import (reference) "cui/colors.less";
-@import (reference) "hue-attributes.less";
+@import (reference) "hue-mixins.less";
 
 @import "hue-assist";
 @import "hue-autocomplete";
