--- a/apps/hbase/src/hbase/static/hbase/less/hbase.less
+++ b/apps/hbase/src/hbase/static/hbase/less/hbase.less
@@ -18,7 +18,7 @@
 
 @import (reference) "cui/colors.less";
 @import (reference) "cui/extra-variables.less";
-@import (reference) "hue-attributes.less";
+@import (reference) "hue-mixins.less";
 
 #hbaseComponents {
 
