--- a/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
@@ -16,9 +16,15 @@
  limitations under the License.
 */
 @import (reference) "cui/colors.less";
-@import (reference) "hue-attributes.less";
+@import (reference) "hue-mixins.less";
 
-@import "hue-tables.less";
+@import "components/hue-clearable.less";
+@import "components/hue-filechooser.less";
+@import "components/hue-notify.less";
+@import "components/hue-ribbon.less";
+@import "components/hue-selector.less";
+@import "components/hue-tables.less";
+@import "hue-helpers.less";
 
 .app-header {
   font-size: 20px;
