HUE-6077 [frontend] Fixed LESS main component for the common dashboard and added it to Oozie
(cherry picked from commit 78077903b5915e338a4487dc72f7e4dcc53f36d3)

--- a/desktop/libs/dashboard/src/dashboard/static/dashboard/less/common_dashboard.less
+++ b/desktop/libs/dashboard/src/dashboard/static/dashboard/less/common_dashboard.less
@@ -16,7 +16,7 @@
  limitations under the License.
 */
 
-.dashboard-search {
+.dashboard-container {
   .dashboard .container-fluid {
     padding: 6px;
   }
