--- a/desktop/libs/dashboard/src/dashboard/static/dashboard/less/search.less
+++ b/desktop/libs/dashboard/src/dashboard/static/dashboard/less/search.less
@@ -16,7 +16,7 @@
  limitations under the License.
 */
 
-.dashboard-search {
+.dashboard-container {
   .dropdown-menu li {
     font-size: 14px;
   }
