--- a/desktop/libs/dashboard/src/dashboard/static/dashboard/less/search_mobile.less
+++ b/desktop/libs/dashboard/src/dashboard/static/dashboard/less/search_mobile.less
@@ -16,7 +16,7 @@
  limitations under the License.
 */
 
-.dashboard-search {
+.dashboard-container {
   .card-column, .ui-sortable {
     min-height: 0 !important;
   }
