HUE-6077 [frontend] Changed dragged widget title background

--- a/desktop/libs/dashboard/src/dashboard/static/dashboard/less/common_dashboard.less
+++ b/desktop/libs/dashboard/src/dashboard/static/dashboard/less/common_dashboard.less
@@ -16,6 +16,8 @@
  limitations under the License.
 */
 
+@import (reference) "cui/colors.less";
+
 .dashboard-container {
   .dashboard .container-fluid {
     padding: 6px;
@@ -78,6 +80,7 @@
     line-height: 24px !important;
     padding-left: 3px !important;
     padding-right: 3px !important;
+    background-color: @cui-white;
   }
 
   .card-widget .card-body {
