HUE-6077 [frontend] Port scroll to anchors to a LESS component

--- a/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
@@ -24,6 +24,7 @@
 @import "components/hue-ribbon.less";
 @import "components/hue-selector.less";
 @import "components/hue-tables.less";
+@import "components/hue-scroll-anchor.less";
 @import "hue-helpers.less";
 
 .app-header {
