--- a/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
@@ -68,16 +68,8 @@
   clear: both;
 }
 
-.right {
-  text-align: right !important;
-}
-
 .center {
   text-align: center !important;
-}
-
-.left {
-  text-align: left !important;
 }
 
 .nowrap, .no-wrap {
@@ -132,4 +124,8 @@
 .hueach {
   position: relative;
   width: 100%;
+}
+
+.close-popover {
+  font-size: 19px;
 }
