--- a/desktop/core/src/desktop/static/desktop/less/hue-helpers.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-helpers.less
@@ -116,5 +116,13 @@ pre, .like-pre {
 }
 
 .no-margin-bottom {
-  margin-bottom: 0!important;
+  margin-bottom: 0 !important;
+}
+
+.default-cursor {
+  cursor: default !important;
+}
+
+.pointer {
+  cursor: pointer !important;
 }
