HUE-5831 [assist] Use the svg document icons in the assist

--- a/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
@@ -129,3 +129,12 @@
 .close-popover {
   font-size: 19px;
 }
+
+.hi {
+  vertical-align: middle;
+  display: inline-block !important; //d3 conflict
+  width: 1em !important; //d3 conflict
+  height: 1em !important; //d3 conflict
+  fill: currentColor;
+  margin-bottom: 0.2em;
+}
