HUE-6077 [frontend] Moved app-icon CSS to cross versions

--- a/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
@@ -43,6 +43,11 @@
   vertical-align: middle;
 }
 
+.app-icon {
+  height: 24px;
+  width: 24px;
+}
+
 .app-header a {
   font-size: 20px !important;
   color: @hue-primary-color-dark !important;
