HUE-6077 [frontend] Added cross versions CSS for demi-modal and selectize
(cherry picked from commit ebdb27fa4bb6841264ca320189d3a568f5fb7a93)

--- a/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
@@ -25,6 +25,8 @@
 @import "components/hue-selector.less";
 @import "components/hue-tables.less";
 @import "components/hue-scroll-anchor.less";
+@import "components/hue-selectize.less";
+@import "components/hue-demi-modal.less";
 @import "hue-helpers.less";
 
 .app-header {
