--- a/desktop/libs/notebook/src/notebook/static/notebook/less/notebook.less
+++ b/desktop/libs/notebook/src/notebook/static/notebook/less/notebook.less
@@ -557,24 +557,6 @@
     background-color: #fdae6b;
   }
 
-  .progress-job {
-    height: 2px;
-  }
-
-  .jobs-overlay {
-    background-color: transparent;
-  }
-
-  .jobs-overlay li {
-    background-color: #FFF;
-    margin-bottom: 5px;
-    padding: 0;
-  }
-
-  .jobs-overlay li a {
-    margin: 6px;
-  }
-
   @-webkit-keyframes pulsate {
     0% {
       margin-left: 0;
@@ -1279,6 +1261,31 @@
     z-index: 1030;
   }
 
+  .jobs-overlay {
+    background-color: #FFF;
+    opacity: 0.8;
+    position: absolute;
+    top: 10px;
+    right: 15px;
+
+    .progress-job {
+      height: 2px;
+      margin-bottom: 0;
+    }
+
+    li {
+      background-color: #FFF;
+      padding: 5px;
+
+      a {
+        margin: 6px;
+      }
+    }
+
+    &:hover {
+      opacity: 1;
+    }
+  }
 
   // TODO: Switch to the context popover css for the file chooser
   .ace-filechooser {
