HUE-6077 [frontend] Unified jHueNotify alerts with CUI

--- a/desktop/core/src/desktop/static/desktop/ext/css/cui/bootstrap2.css
+++ b/desktop/core/src/desktop/static/desktop/ext/css/cui/bootstrap2.css
@@ -5527,6 +5527,9 @@ a.badge:focus {
   border-radius: 0;
   text-shadow: none;
 }
+.alert .close {
+  right: 0;
+}
 .table th,
 .table td {
   padding: 7px 8px 8px 8px;
