HUE-6140 [oozie] Use svg icons for Oozie

--- a/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
@@ -44,6 +44,7 @@
   width: 24px !important; //conflicts with nv.d3.css
   display: inline-block !important; //conflicts with nv.d3.css
   vertical-align: middle;
+  margin-top: -3px;
 }
 
 .app-icon {
