--- a/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
@@ -160,3 +160,18 @@
   -ms-filter: blur(5px);
   filter: blur(5px);
 }
+
+.hue-ace-error {
+  position: absolute;
+  border-bottom: 1px dotted #FF0000;
+  border-radius: 0 !important;
+}
+
+.hue-ace-location {
+  position: absolute;
+  background-color: #DBE8F1;
+  border: 1px solid #DBE8F1;
+  border-radius: 1px;
+  margin-left: -1px;
+  margin-top: -1px;
+}
