--- a/desktop/core/src/desktop/static/desktop/less/hue-mixins.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-mixins.less
@@ -27,6 +27,7 @@
 
 @hue-primary-color-dark: #338BB8;
 @hue-primary-color-light: #DBE8F1;
+@hue-trunk: #A585B9;
 
 @hue-disabled-color: @cui-gray-100;
 @hue-error-color: @cui-red-400;
