--- a/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
@@ -27,6 +27,7 @@
 @import "components/hue-scroll-anchor.less";
 @import "components/hue-selectize.less";
 @import "components/hue-demi-modal.less";
+@import "components/hue-spinner.less";
 @import "components/hue-tour.less";
 @import "hue-helpers.less";
 
