HUE-6077 [frontend] Ported hue-scrollbar to common LESS

--- a/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
@@ -29,6 +29,7 @@
 @import "components/hue-demi-modal.less";
 @import "components/hue-spinner.less";
 @import "components/hue-tour.less";
+@import "components/hue-scrollbar.less";
 @import "hue-helpers.less";
 
 .app-header {
