HUE-6077 [frontend] Unify colors throughout

--- a/desktop/core/src/desktop/static/desktop/less/components/hue-demi-modal.less
+++ b/desktop/core/src/desktop/static/desktop/less/components/hue-demi-modal.less
@@ -26,7 +26,7 @@
   padding: 0;
   background-color: @cui-white;
   min-height: 210px;
-  border: 1px solid #CCC;
+  border: 1px solid @cui-gray-400;
   -webkit-border-bottom-right-radius: 0px;
   -webkit-border-bottom-left-radius: 0px;
   -moz-border-radius-bottomright: 0px;
@@ -45,7 +45,7 @@
 
   & .modal-header {
     padding: 9px 15px;
-    border-bottom: 1px solid #eee;
+    border-bottom: 1px solid @cui-gray-100;
   }
 
   & .modal-header .close {
@@ -81,5 +81,5 @@
 }
 
 .demi-modal-chevron:hover {
-  background-color: #F6F6F6;
+  background-color: @cui-gray-050;
 }
