--- a/desktop/core/src/desktop/static/desktop/less/components/hue-scroll-anchor.less
+++ b/desktop/core/src/desktop/static/desktop/less/components/hue-scroll-anchor.less
@@ -17,7 +17,7 @@
 */
 
 .hueAnchor {
-  color: #FFFFFF;
+  color: @cui-white;
   opacity: 0.65;
   filter: alpha(opacity=65);
   position: fixed;
@@ -25,7 +25,7 @@
   -webkit-border-radius: 6px;
   -moz-border-radius: 6px;
   border-radius: 6px;
-  background-color: #333333;
+  background-color: @cui-gray-800;
   padding: 10px;
   padding-left: 14px;
   padding-right: 14px;
