--- a/desktop/core/src/desktop/static/desktop/less/httperrors.less
+++ b/desktop/core/src/desktop/static/desktop/less/httperrors.less
@@ -16,11 +16,14 @@
  limitations under the License.
 */
 
+@import (reference) "cui/colors.less";
+@import (reference) "hue-mixins.less";
+
 #httperror {
   .error-code {
     margin: 0;
     padding-bottom: 30px;
-    color: #CCC;
+    color: @cui-gray-400;
     text-align: center;
     font-weight: 200;
     font-size: 150px;
