--- a/desktop/core/src/desktop/static/desktop/less/hue-assist.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-assist.less
@@ -786,11 +786,11 @@
   height: 100%;
 
   th {
-    border-right: 1px solid #e5e5e5;
+    border-right: 1px solid @cui-gray-200;
   }
 
   td {
-    border-right: 1px solid #e5e5e5;
+    border-right: 1px solid @cui-gray-200;
     white-space: nowrap;
   }
 
@@ -800,16 +800,16 @@
   }
 
   .fixed-header-row {
-    border-bottom: 1px solid #e5e5e5;
+    border-bottom: 1px solid @cui-gray-200;
   }
 
   .fixed-first-cell {
-    border-right: 1px solid #e5e5e5;
+    border-right: 1px solid @cui-gray-200;
     margin-left: -1px;
 
     thead th {
       height: 23px;
-      border-bottom: 1px solid #e5e5e5 !important;
+      border-bottom: 1px solid @cui-gray-200 !important;
     }
   }
 }
