--- a/desktop/core/src/desktop/static/desktop/less/components/hue-clearable.less
+++ b/desktop/core/src/desktop/static/desktop/less/components/hue-clearable.less
@@ -18,7 +18,7 @@
 
 .clearable {
   background: url(/static/desktop/art/clearField.png) no-repeat right -10px center;
-  border: 1px solid #999;
+  border: 1px solid @cui-gray-600;
   padding: 3px 18px 3px 4px;
   border-radius: 3px;
 }
