--- a/desktop/core/src/desktop/static/desktop/less/components/hue-filechooser.less
+++ b/desktop/core/src/desktop/static/desktop/less/components/hue-filechooser.less
@@ -19,7 +19,7 @@
 .jHueFilechooserActions {
   margin-top: 14px;
   padding-top: 10px;
-  border-top: 1px dashed #EEEEEE;
+  border-top: 1px dashed @cui-gray-100;
 }
 
 .pathChooser, .pathChooserKo, .pathFolderChooserKo {
@@ -36,14 +36,14 @@
 }
 
 .filechooser-tree .editable-breadcrumbs:hover {
-  background-color: #F0F0F0;
+  background-color: @cui-gray-050;
 }
 
 .filechooser-tree .editable-breadcrumb-input {
   margin-left: 12px;
   margin-bottom: 0;
   border-radius: 2px;
-  border: 1px solid #EEE;
+  border: 1px solid @cui-gray-100;
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
@@ -56,5 +56,5 @@
 }
 
 .filechooser-tree .hueBreadcrumb > li:last-child > a {
-  color: #666;
+  color: @cui-gray-800;
 }
