--- a/desktop/core/src/desktop/static/desktop/less/components/hue-selector.less
+++ b/desktop/core/src/desktop/static/desktop/less/components/hue-selector.less
@@ -17,14 +17,14 @@
 */
 
 .jHueSelector {
-  border: 1px solid #F1F1F1;
+  border: 1px solid @cui-gray-050;
   padding: 0;
   margin: 0;
   width: 300px;
 }
 
 .jHueSelectorHeader {
-  background-color: #F1F1F1;
+  background-color: @cui-gray-050;
   padding: 4px;
 }
 
@@ -45,11 +45,11 @@
   width: 100px;
   height: 20px;
   min-height: 20px;
-  border: 1px solid #CCCCCC;
+  border: 1px solid @cui-gray-400;
   border-radius: 10px;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
-  color: #555555;
+  color: @cui-gray-800;
   font-size: 10px;
   padding-left: 4px;
 }
@@ -70,7 +70,7 @@
 }
 
 .jHueSelector li.selectorDivider {
-  border-bottom: 1px solid #E5E5E5;
+  border-bottom: 1px solid @cui-gray-100;
   padding: 4px;
-  color: #338BB8;
+  color: @hue-primary-color-dark;
 }
