--- a/desktop/core/src/desktop/static/desktop/less/components/hue-tables.less
+++ b/desktop/core/src/desktop/static/desktop/less/components/hue-tables.less
@@ -249,7 +249,7 @@ td.details {
 }
 
 .paging_full_numbers span.paginate_button {
-  background-color: #ddd;
+  background-color: @cui-gray-300;
 }
 
 .paging_full_numbers span.paginate_button:hover {
@@ -431,7 +431,7 @@ table.display tr.gradeX {
 }
 
 table.display tr.gradeU {
-  background-color: #ddd;
+  background-color: @cui-gray-300;
 }
 
 div.box {
@@ -470,6 +470,6 @@ div.box {
 }
 
 .table tr.locked td.unlockable:hover .fa-unlock, .table tr td.lockable:hover .fa-lock {
-  color: #666;
+  color: @cui-gray-800;
   display: block;
 }
