--- a/desktop/core/src/desktop/static/desktop/less/hue-autocomplete.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-autocomplete.less
@@ -35,7 +35,7 @@
   max-height: 250px;
   overflow: hidden;
 
-  border: 1px solid #DDD;
+  border: 1px solid @cui-gray-300;
   border-radius: 2px;
   background-color: @cui-white;
   .hue-box-shadow-bottom();
@@ -53,7 +53,7 @@
 .autocompleter-header {
   .flex(0 0 20px);
   padding: 5px;
-  background-color: #F9F9F9;
+  background-color: @cui-gray-050;
   line-height: 20px;
   font-size: 14px;
   overflow: hidden;
@@ -127,7 +127,7 @@
   right: 0;
   top: 3px;
   padding-right: 3px;
-  color: #737373;
+  color: @cui-gray-700;
   white-space: nowrap;
 }
 
@@ -152,7 +152,7 @@
 
 .autocompleter-details-contents .details-attribute,
 .autocompleter-details-contents .details-popularity {
-  color: #737373;
+  color: @cui-gray-700;
   display: inline-block;
 }
 
@@ -169,13 +169,13 @@
 
 .autocompleter-details-contents .details-comment {
   margin-top: 5px;
-  color: #737373;
+  color: @cui-gray-700;
   font-style: italic;
 }
 
 .autocompleter-details-contents .details-code {
-  background-color: #F9F9F9;
+  background-color: @cui-gray-050;
   padding:3px;
-  color: #737373;
+  color: @cui-gray-700;
   font: 12px/normal 'Monaco', 'Menlo', 'Ubuntu Mono', 'Consolas', 'source-code-pro', monospace;direction: ltr;
 }
