--- a/desktop/core/src/desktop/static/desktop/less/hue-helpers.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-helpers.less
@@ -28,13 +28,13 @@
 
 pre, .like-pre {
   border: none;
-  border-left: 5px solid #DDD;
+  border-left: 5px solid @cui-gray-300;
   border-radius: 0;
   padding: 9.5px;
   margin: 0 0 10px;
   font-size: 12px;
   line-height: 20px;
-  background-color: #f5f5f5;
+  background-color: @cui-gray-050;
   color: #444;
   font-family: Monaco,Menlo,Consolas,"Courier New",monospace;
 }
