--- a/desktop/core/src/desktop/static/desktop/less/hue.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue.less
@@ -91,8 +91,8 @@ body {
   z-index: 2999;
   top: 45px;
   padding: 10px;
-  max-height: 350px;
-  width: 400px;
+  max-height: 400px;
+  width: 500px;
   right: 10px;
   font-size: 13px;
   border-radius: @hue-panel-border-radius;
@@ -115,18 +115,27 @@ body {
   padding: 4px;
 }
 
-.compose-action {
+.btn-flat {
+  border-radius: 4px;
+  box-shadow: none;
+}
+
+.dropdown-menu-new {
+  margin-left: 267px;
+}
+
+.navbar-dropdown-flat {
   margin-top: 10px;
   z-index: 999999;
   line-height: 20px;
   border-radius: 4px;
 }
 
-.compose-action:hover .btn {
+.navbar-dropdown-flat:hover .btn, .btn-flat:hover {
   background-color: rgba(240, 240, 240, 0.6) !important;
 }
 
-.compose-action .btn {
+.navbar-dropdown-flat .btn, .btn-flat {
   color: @hue-primary-color-dark;
   border: 1px solid transparent;
   background-color: transparent;
@@ -136,8 +145,9 @@ body {
   .hue-ease-transition(~"background-color, color");
 }
 
-.compose-action .btn:hover {
+.navbar-dropdown-flat .btn:hover, .btn-flat:hover {
   background-color: rgba(240, 240, 240, 0.92);
+  border: 1px solid transparent;
   color: @hue-primary-color-dark;
 }
 
@@ -152,47 +162,47 @@ body {
   .hue-ease-transition(~"background-color, color");
 }
 
-.compose-action .btn:hover .jobs-badge {
+.navbar-dropdown-flat .btn:hover .jobs-badge {
   background-color: @hue-primary-color-dark;
   color: rgba(240, 240, 240, 0.92);
 }
 
-.compose-action .btn:first-child:active,
-.compose-action .btn:first-child {
+.navbar-dropdown-flat .btn:first-child:active,
+.navbar-dropdown-flat .btn:first-child {
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
   padding-right: 2px;
   box-shadow: none;
 }
 
-.compose-action .btn:last-of-type:not(:first-child) {
+.navbar-dropdown-flat .btn:last-of-type:not(:first-child) {
   padding-left: 4px;
 }
 
-.compose-action .btn:last-of-type {
+.navbar-dropdown-flat .btn:last-of-type {
   margin-left: 0;
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
   box-shadow: none;
 }
 
-.compose-action .dropdown-menu img {
+.navbar-dropdown .dropdown-menu img {
   height: 18px;
   width: 18px;
   margin: -1px 2px 0 -7px;
 }
 
-.compose-action svg {
+.navbar-dropdown svg {
   margin: 0 2px -4px -7px;
   display: inline-block !important; // Conflicts with nv.d3.css
 }
 
-.compose-action .dropdown-menu i {
+.navbar-dropdown .dropdown-menu i {
   margin: -1px 2px 0 -7px;
 }
 
-.compose-action .dropdown-menu i,
-.compose-action .dropdown-menu svg {
+.navbar-dropdown .dropdown-menu i,
+.navbar-dropdown .dropdown-menu svg {
   color: @hue-primary-color-dark;
   fill: @hue-primary-color-dark;
   height: 18px;
@@ -200,8 +210,8 @@ body {
   font-size: 14px;
 }
 
-.compose-action a:hover i,
-.compose-action a:hover svg {
+.navbar-dropdown a:hover i,
+.navbar-dropdown a:hover svg {
   color: @cui-white;
   fill: @cui-white;
 }
