HUE-6077 [frontend] Fixes query builder on Hue 3 and port the styles to common
(cherry picked from commit ca54d94af92e155d360db2db5201dba952a49c74)

--- a/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
@@ -30,6 +30,7 @@
 @import "components/hue-spinner.less";
 @import "components/hue-tour.less";
 @import "components/hue-scrollbar.less";
+@import "components/hue-query-builder.less";
 @import "hue-helpers.less";
 
 .app-header {
