HUE-6151 [editor] Add jasmine tests for SqlAutocompleter3
This adds 383 new jasmine tests for the autocompleter covering a lot of different parser responses as well as random errors from the API calls.

--- a/desktop/core/src/desktop/templates/jasmineRunner.html
+++ b/desktop/core/src/desktop/templates/jasmineRunner.html
@@ -55,6 +55,8 @@
     };
 
     var HAS_OPTIMIZER = false;
+
+    var CACHEABLE_TTL = 0;
   </script>
 
   <script type="text/javascript" src="../static/desktop/ext/js/jquery/jquery-2.1.1.min.js"></script>
@@ -87,6 +89,7 @@
   <script type="text/javascript" src="../static/desktop/js/sqlAutocompleter2.js"></script>
   <script type="text/javascript" src="../static/desktop/spec/sqlAutocompleter2Spec.js"></script>
 
+  <script type="text/javascript" src="../static/desktop/js/sqlUtils.js"></script>
   <script type="text/javascript" src="../static/desktop/js/sqlAutocompleter3.js"></script>
   <script type="text/javascript" src="../static/desktop/spec/sqlAutocompleter3Spec.js"></script>
 
