HUE-6077 [frontend] Fix top menu for Hue 3
(cherry picked from commit 4998676f8d970d72df23fc8e780a414ea2ac14c8)

--- a/desktop/core/src/desktop/static/desktop/css/hue3.css
+++ b/desktop/core/src/desktop/static/desktop/css/hue3.css
@@ -499,9 +499,7 @@ a#advanced-btn:hover {
 .navigator .dropdown-menu {
   z-index: 20000;
   box-shadow: none;
-  margin-top: -4px;
-  margin-left: -1px;
-  border-top: 2px solid #EEE;
+  border-radius: 0;
 }
 
 .navigator .nav-pills > li > a {
