HUE-6077 [frontend] Fixed filechooser sizes and updated the upload button style
(cherry picked from commit 725ed3415ed37ee1fe22746d3c851f64e28193a0)

--- a/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
@@ -31,6 +31,7 @@
 @import "components/hue-tour.less";
 @import "components/hue-scrollbar.less";
 @import "components/hue-query-builder.less";
+@import "components/hue-qq-upload.less";
 @import "hue-helpers.less";
 
 .app-header {
